--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation("net.aksingh:owm-japis:2.5.3.0")
+    implementation 'com.google.code.gson:gson:2.8.6'
     testCompile "org.mockito:mockito-core:3.+"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
